Signed-off-by: TailsQue <TailsQue@Worldender>

--- a/tails_test/res/values/strings.xml
+++ b/tails_test/res/values/strings.xml
@@ -2,4 +2,5 @@
 <resources>
     <string name="hello">Hello World, test_test!</string>
     <string name="app_name">Test_test</string>
+    <string name="Helloworld">Hello world, What's your name?</string>
 </resources>
